Project

General

Profile

Actions

Bug #51157

closed

Return correct XML response when delete role fail.

Added by zhiming zhang almost 3 years ago. Updated about 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

100%

Source:
Tags:
sts role backport_processed
Backport:
octopus pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When deletes role fail, the client receives:

<DeleteRoleResponse>
<ResponseMetadata>
<RequestId>tx000000000000000308aec-0060c0799f-2658b-cn_east2</RequestId>
</ResponseMetadata>
</DeleteRoleResponse>
<?xml version="1.0" encoding="UTF-8"?>
<Error>
<Code>DeleteConflict</Code>
<RequestId>tx000000000000000308aec-0060c0799f-2658b-cn_east2</RequestId>
<HostId>2658b-cn_east2-zg_cn</HostId>
</Error>

and can not parse XML response.

If the role's perm policy map is not empty, deleting operation will fail because of CONFLICT and return error message, but should not return the message used for success.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #51780: octopus: Return correct XML response when delete role fail.RejectedActions
Copied to rgw - Backport #51781: pacific: Return correct XML response when delete role fail.ResolvedCory SnyderActions
Actions #1

Updated by zhiming zhang almost 3 years ago

<DeleteRoleResponse>
<ResponseMetadata>
<RequestId>tx000000000000000308aec-0060c0799f-2658b-cn_east2</RequestId>
</ResponseMetadata>
</DeleteRoleResponse>

<Error>
<Code>DeleteConflict</Code>
<RequestId>tx000000000000000308aec-0060c0799f-2658b-cn_east2</RequestId>
<HostId>2658b-cn_east2-zg_cn</HostId>
</Error>

Actions #2

Updated by zhiming zhang almost 3 years ago

This exists in master, N and O versions

Actions #5

Updated by Casey Bodley almost 3 years ago

  • Status changed from New to Fix Under Review
  • Tags set to sts role
  • Pull request ID set to 41800
Actions #6

Updated by Kefu Chai almost 3 years ago

  • Description updated (diff)
Actions #7

Updated by Casey Bodley almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to octopus pacific
Actions #8

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51780: octopus: Return correct XML response when delete role fail. added
Actions #9

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51781: pacific: Return correct XML response when delete role fail. added
Actions #10

Updated by Backport Bot almost 2 years ago

  • Tags changed from sts role to sts role backport_processed
Actions #11

Updated by Konstantin Shalygin about 1 year ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
Actions

Also available in: Atom PDF