rgw: Return correct XML response when delete role fails

Fixes: https://tracker.ceph.com/issues/51157
Signed-off-by: zhiming zhang <zhangzhm1@chinatelecom.cn>