src/rgw/rgw_rest_role.cc
@@ -181,11 +181,13 @@ void RGWDeleteRole::execute(optional_yield y)
     op_ret = -ERR_NO_ROLE_FOUND;
   }
 
-  s->formatter->open_object_section("DeleteRoleResponse");
-  s->formatter->open_object_section("ResponseMetadata");
-  s->formatter->dump_string("RequestId", s->trans_id);
-  s->formatter->close_section();
-  s->formatter->close_section();
+  if (op_ret == 0) {
+    s->formatter->open_object_section("DeleteRoleResponse");
+    s->formatter->open_object_section("ResponseMetadata");
+    s->formatter->dump_string("RequestId", s->trans_id);
+    s->formatter->close_section();
+    s->formatter->close_section();
+  }
 }
 
 int RGWGetRole::verify_permission(optional_yield y)
